--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
     "markdown-it": "^12.3.2",
     "markdown-it-anchor": "^8.6.2"
+  },
+  "dependencies": {
+    "@types/markdown-it": "*"
   }
 }
