--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "devDependencies": {
     "@11ty/eleventy": "^1.0.1",
     "@11ty/eleventy-navigation": "^0.3.2",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
-    "markdown-it": "^12.3.2",
+    "@11ty/eleventy-plugin-syntaxhighlight": "4.1.0",
+    "markdown-it": "13.0.1",
     "markdown-it-anchor": "^8.6.2"
   },
   "dependencies": {
